esp_OTA_SMT32/build/log/idf_py_stdout_output_6436
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\esp\esp_OTA_SMT32\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/esp/esp_OTA_SMT32/build/bootloader/bootloader.bin"
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[2/8] Building C object esp-idf/hostBootloader/CMakeFiles/__idf_hostBootloader.dir/hostBootloader_command.c.obj
FAILED: esp-idf/hostBootloader/CMakeFiles/__idf_hostBootloader.dir/hostBootloader_command.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/esp/esp_OTA_SMT32/build/config -ID:/esp/esp_OTA_SMT32/component/hostBootloader -IC:/Espressif/frameworks/esp-idf-v5.3/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_uart/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/vfs/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_timer/include -ID:/esp/esp_OTA_SMT32/component/Min -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fmax-include-depth=500 -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/esp/esp_OTA_SMT32=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/hostBootloader/CMakeFiles/__idf_hostBootloader.dir/hostBootloader_command.c.obj -MF esp-idf\hostBootloader\CMakeFiles\__idf_hostBootloader.dir\hostBootloader_command.c.obj.d -o esp-idf/hostBootloader/CMakeFiles/__idf_hostBootloader.dir/hostBootloader_command.c.obj -c D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader_command.c
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader_command.c: In function 'ota_send_code':
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader_command.c:43:5: error: unknown type name 'OTACommand'; did you mean 'OTA_Command'?
   43 |     OTACommand cmd ;
      |     ^~~~~~~~~~
      |     OTA_Command
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader_command.c:44:8: error: request for member 'command_id' in something not a structure or union
   44 |     cmd.command_id = data_type;
      |        ^
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader_command.c:45:8: error: request for member 'length' in something not a structure or union
   45 |     cmd.length = 1;
      |        ^
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader_command.c:46:8: error: request for member 'operation_code' in something not a structure or union
   46 |     cmd.operation_code = operation_code;
      |        ^
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader_command.c: In function 'ota_send_response':
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader_command.c:52:5: error: unknown type name 'OTAReponse'; did you mean 'OTA_Response'?
   52 |     OTAReponse response;
      |     ^~~~~~~~~~
      |     OTA_Response
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader_command.c:53:13: error: request for member 'command_id' in something not a structure or union
   53 |     response.command_id = OTA_TYPE_RESPONSE;
      |             ^
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader_command.c:54:13: error: request for member 'length' in something not a structure or union
   54 |     response.length = 1;
      |             ^
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader_command.c:55:13: error: request for member 'response_code' in something not a structure or union
   55 |     response.response_code = response_type;
      |             ^
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader_command.c: In function 'host_bootLoader_handle':
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader_command.c:65:13: warning: unused variable 'len' [-Wunused-variable]
   65 |     uint8_t len = 0 ;
      |             ^~~
ninja: build stopped: subcommand failed.
